--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vapi-ai/web": "^2.2.5",
+    "axios": "^1.8.4",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.484.0",
     "next": "^15.2.4",
     "react": "^19.0.0",
